chore(config): setup dev profile and environment variables for datasource